done with spring 2023

--- a/sp23.html
+++ b/sp23.html
@@ -30,6 +30,9 @@
                 <li>Reinstall OS (Teaching Kate and working with Cary)</li>
                 <li>First time really interacting with VMs</li>
                 <li>Got the needed VMs back up</li>
+                <li>set up my own VM for a class project</li>
+                <li>Set up the bridge on hydra so that we can ssh into our servers</li>
+                <li>Hydra was unable to ssh into, and now that is fixed</li>
             </ul>
             
             <h4>General</h4>
@@ -46,6 +49,8 @@
                 <li>Small things like static ip on Talos</li>
                 <li>learned about nmap</li>
                 <li>Currently working with Jonathan on saving the research servers and the managed switches</li>
+                <li>Cable management</li>
+                <li>Replacing M3</li>
             </ul>
         </div>
 
@@ -57,6 +62,7 @@
                 <li>Career Fair talk</li>
                 <li>Emails, emails to OIT, Purchases</li>
                 <li>In general trying to be helpful</li>
+                <li>NASA in COSI</li>
             </ul>
         </div>
 
@@ -67,6 +73,7 @@
                 <li>Recovery squad (at the end of wave 3 sadly)</li>
                 <li>Helping Sydney get up a website</li>
                 <li>"Overview of making a COSI Website" - Talk</li>
+                <li>Helped Juno get a VM up</li>
             </ul>
         </div>
 
