done with being a junior

--- a/sp23.html
+++ b/sp23.html
@@ -73,7 +73,9 @@
                 <li>Recovery squad (at the end of wave 3 sadly)</li>
                 <li>Helping Sydney get up a website</li>
                 <li>"Overview of making a COSI Website" - Talk</li>
-                <li>Helped Juno get a VM up</li>
+                <li>Helped Juno get a VM up (not finished)</li>
+                <li>Helped Iselda get her website up</li>
+                <li>"Reason to Explore your OS" talk</li>
             </ul>
         </div>
 
