added commented feature for sticky title

--- a/template.html
+++ b/template.html
@@ -18,11 +18,14 @@
         }
         .title{
             margin: auto;
-            width: 75%;
+            width: 80%;
+            opacity: 100%;
             border: 5px solid rgb(231, 191, 12);
             padding: 10px;
             text-align: center;
             font-family: Georgia, 'Times New Roman', Times, serif;
+            /* position: sticky; /* make sticky by uncommenting*/
+            top: 0;
         }
         .center {
             margin: auto;
@@ -45,6 +48,58 @@
         <div class = "center">
             <h2>Label:</h2>
             <ul>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
+                <li>Bullet</li>
                 <li>Bullet</li>
                 <li>Bullet</li>
                 <li>Bullet</li>
