Power is failing and I dont want to loose anything

--- a/template.html
+++ b/template.html
@@ -104,6 +104,9 @@
                 <li>Bullet</li>
                 <li>Bullet</li>
             </ul>
+        </div>
+        <br>
+        <div class="center">
             <h2>Things I Learned:</h2>
             <ul>
                 <li>Basic CSS</li>
