--- a/fa23.html
+++ b/fa23.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        body {
-            background-color: darkblue;
-            background-image: url("Mirror_Under_Construction_But_Better_Carlone_Cosi.png");
-            background-repeat: repeat;
-        }
-        div {
-            border-radius: 25px;
-            background: #173de6;
-            padding: 20px;
-            width: 200px;
-            height: auto;
-            z-index: 1;
-            opacity: 90%;
-            
-        }
-        .title{
-            margin: auto;
-            width: 80%;
-            opacity: 100%;
-            border: 5px solid rgb(231, 191, 12);
-            padding: 10px;
-            text-align: center;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            /* position: sticky; /* make sticky by uncommenting*/
-            top: 0;
-        }
-        .center {
-            margin: auto;
-            width: 75%;
-            border: 3px solid rgb(231, 191, 12);
-            padding: 15px;
-            text-align: left;
-        }
-    </style>
+    
 
     <head>
         <title>SophiaCarlone mp*</title>
+        <link rel="stylesheet" href="./tux_style.css">
     </head>
 
     <body>
@@ -47,41 +14,33 @@
         <br>
         <div class = "center">
             <h2>Lab Contributions</h2>
-            <ul>
-                <li>Lab Director</li>
-                <li>Activities Fair</li>
-                <li>Career Fair Kick Off</li>
-                <li>Running meetings with Cary</li>
-                <li>Tours</li>
-                <li>Open House firing squad partcipant</li>
-            </ul>
+            Lab Director<br>
+            Activities Fair<br>
+            Career Fair Kick Off<br>
+            Running meetings with Cary<br>
+            Tours<br>
+            Open House firing squad partcipant<br>
         </div>
         <br>
         <div class="center">
             <h2>Server Room</h2>
-            <ul>
-                <li>New Switch Configurations</li>
-                <li>TalDOS </li>
-                <li>Cleaned up a bit one day</li>
-                <li>Lock box shenanigans</li>
-            </ul>
+                New Switch Configurations<br>
+                TalDOS<br>
+                Cleaned up a bit one day<br>
+                Lock box shenanigans<br>
         </div>
         <br>
         <div class="center">
             <h2>Teaching</h2>
-            <ul>
-                <li>"What is open source" talk</li>
-                <li>"Switch Configurations" talk</li>
-                <li>Hands on switch switching in COSI main and COLO</li>
-            </ul>
+               "What is open source" talk<br>
+               "Switch Configurations" talk<br>
+               Hands on switch switching in COSI main and COLO<br>
         </div>
         <br>
         <div class="center">
             <h2>Learning</h2>
-            <ul>
-                <li>Basic CSS</li>
-                <li>Mikrotik's RouterOS for the switches</li>
-            </ul>
+           Basic CSS<br>
+           Mikrotik's RouterOS for the switches<br>
         </div>
     </body>
 </html>
