major animations done

--- a/fa23.html
+++ b/fa23.html
@@ -9,38 +9,46 @@
 
     <body>
         <div class="title">
-            <h1>Sophia Carlone MP* for 3 Credits Fall 2023</h1>
+            <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Fall 2023</h1>
         </div>
         <br>
-        <div class = "center">
+        <div class = "textbox">
             <h2>Lab Contributions</h2>
-            Lab Director<br>
-            Activities Fair<br>
-            Career Fair Kick Off<br>
-            Running meetings with Cary<br>
-            Tours<br>
-            Open House firing squad partcipant<br>
+            <div class = "overlay">
+                Lab Director<br>
+                Activities Fair<br>
+                Career Fair Kick Off<br>
+                Running meetings with Cary<br>
+                Tours<br>
+                Open House firing squad partcipant<br>
+            </div>
         </div>
         <br>
-        <div class="center">
+        <div class="textbox">
             <h2>Server Room</h2>
+            <div class="overlay">
                 New Switch Configurations<br>
                 TalDOS<br>
                 Cleaned up a bit one day<br>
                 Lock box shenanigans<br>
+            </div>
         </div>
         <br>
-        <div class="center">
+        <div class="textbox">
             <h2>Teaching</h2>
+            <div class="overlay">
                "What is open source" talk<br>
                "Switch Configurations" talk<br>
                Hands on switch switching in COSI main and COLO<br>
+            </div>
         </div>
         <br>
-        <div class="center">
+        <div class="textbox">
             <h2>Learning</h2>
-           Basic CSS<br>
-           Mikrotik's RouterOS for the switches<br>
+            <div class="overlay">
+                 Basic CSS<br>
+                Mikrotik's RouterOS for the switches<br>
+            </div>
         </div>
     </body>
 </html>
