--- a/fa23.html
+++ b/fa23.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-    
-
     <head>
         <title>SophiaCarlone mp*</title>
         <link rel="stylesheet" href="./tux_style.css">
@@ -25,12 +23,13 @@
         </div>
         <br>
         <div class="textbox">
-            <h2>Server Room</h2>
+            <h2>Server Room/Network</h2>
             <div class="overlay">
                 New Switch Configurations<br>
                 TalDOS<br>
                 Cleaned up a bit one day<br>
                 Lock box shenanigans<br>
+                Creating new topology<br>
             </div>
         </div>
         <br>
@@ -50,6 +49,7 @@
                 Mikrotik's RouterOS for the switches<br>
             </div>
         </div>
+        <img src="Mirror_Under_Construction_But_Better_Carlone_Cosi.png" class="big_tux">
     </body>
 </html>
 <!--I wanna have little icons in the corner based on what is being talked about in the square-->
