--- a/fa23.html
+++ b/fa23.html
@@ -19,6 +19,9 @@
                 Running meetings with Cary<br>
                 Tours<br>
                 Open House firing squad partcipant<br>
+                Github Rules<br>
+                Purchases<br>
+                Some Inventory<br>
             </div>
         </div>
         <br>
@@ -30,6 +33,7 @@
                 Cleaned up a bit one day<br>
                 Lock box shenanigans<br>
                 Creating new topology<br>
+                Most recent outage<br>
             </div>
         </div>
         <br>
@@ -39,6 +43,7 @@
                "What is open source" talk<br>
                "Switch Configurations" talk<br>
                Hands on switch switching in COSI main and COLO<br>
+               Taught people coughCARYcough and others about VLANS, switches, COSI network, etc.<br>
             </div>
         </div>
         <br>
@@ -52,4 +57,3 @@
         <img src="Mirror_Under_Construction_But_Better_Carlone_Cosi.png" class="big_tux">
     </body>
 </html>
-<!--I wanna have little icons in the corner based on what is being talked about in the square-->
