all activities accounted for?

--- a/fa23.html
+++ b/fa23.html
@@ -21,7 +21,10 @@
                 Open House firing squad partcipant<br>
                 Github Rules<br>
                 Purchases<br>
-                Some Inventory<br>
+                Inventory<br>
+                Breaking open the LockBox<br>
+                Github Reviews<br>
+                Stepping down as lab director<br>
             </div>
         </div>
         <br>
@@ -34,6 +37,8 @@
                 Lock box shenanigans<br>
                 Creating new topology<br>
                 Most recent outage<br>
+                Working with OIT and Cary when Cary killed the connection<br>
+                Eventually getting a connection to COLO<br>
             </div>
         </div>
         <br>
@@ -44,14 +49,18 @@
                "Switch Configurations" talk<br>
                Hands on switch switching in COSI main and COLO<br>
                Taught people coughCARYcough and others about VLANS, switches, COSI network, etc.<br>
+               bash script Talk<br>
+               DN42 Talk<br>
+               A lot of last minute talks<br>
             </div>
         </div>
         <br>
         <div class="textbox">
             <h2>Learning</h2>
             <div class="overlay">
-                 Basic CSS<br>
+                Basic CSS<br>
                 Mikrotik's RouterOS for the switches<br>
+                learned a bit about cables when buying the fiber optic cables<br>
             </div>
         </div>
         <img src="Mirror_Under_Construction_But_Better_Carlone_Cosi.png" class="big_tux">
