--- a/Testing/fa23.html
+++ b/Testing/fa23.html
@@ -6,17 +6,18 @@
     </head>
 
     <body>
-        <section class = "sw_text">
-            <div class = "crawl">
-                How are you doing Krusty Krew? It is about midnight and instead of doing AOC like yall I am stuck doing homework. <br>
-                I was watching Andor for my 10 minute break and just decided that star wars should be doable for my mp* project right? <br>
-                Anyways, I am super tired and I hope I just forget about everything I wrote while I am presenting this and that I actually get to do all that I wanted to do with this project. WHICH inlcuded having a lil death star in the corner that I would then click and it would shoot this tesxt and it would be all done. I hope that is implemented. <br>
-                Just for the sake of this not all being useless, I am going to add in the actuall vital things for this dang mp* <br>
-                Wait, first lemme push <br>
-                Okay, done <br>
-                I just tested this and it does look a bit weird, but its finals week so I got an excuse okay! <br>
-            </div>
-        </section>
+        <div class="fade"></div>
+            <section class = "sw_text">
+                <div class = "crawl">
+                    How are you doing Krusty Krew? It is about midnight and instead of doing AOC like yall I am stuck doing homework. <br>
+                    I was watching Andor for my 10 minute break and just decided that star wars should be doable for my mp* project right? <br>
+                    Anyways, I am super tired and I hope I just forget about everything I wrote while I am presenting this and that I actually get to do all that I wanted to do with this project. WHICH inlcuded having a lil death star in the corner that I would then click and it would shoot this tesxt and it would be all done. I hope that is implemented. <br>
+                    Just for the sake of this not all being useless, I am going to add in the actuall vital things for this dang mp* <br>
+                    Wait, first lemme push <br>
+                    Okay, done <br>
+                    I just tested this and it does look a bit weird, but its finals week so I got an excuse okay! <br>
+                </div>
+            </section>
         <!-- <div class="title">
             <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Fall 2023</h1>
         </div>
