--- a/sp24.html
+++ b/sp24.html
@@ -7,10 +7,36 @@
 
     <body>
         <div class="title">
-            <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Fall 2023</h1>
+            <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>
         </div>
         <br>
         <div class = "textbox">
+            <h2>Things I did</h2>
+            <div class = "overlay">
+                Surprise Tours<br>
+                TODO program<br>
+                ADB Talk<br>
+                Organizing HOPE with Hunter<br>
+                DN42 (but kinda failing on that)<br>
+            </div>
+        </div>
+        <div class = "textbox">
+            <h2>THE GREAT COSI MOVE OF 2024</h2>
+            <div class = "overlay">
+                Organization<br>
+                topology<br>
+                Cleaned out COLO<br>
+                Pingbot<br>
+                Going with Juno to get that link up to SC<br>
+                The first day of moving<br>
+                The second and third day of organizing servers<br>
+                Created the website for my capstone<br>
+                Getting Ziltoid OS reinstalled to be the management server (tenative on Wednesday)<br>
+                Documentation of book (getting that scheduled)<br>
+            </div>
+        </div>
+        <br>
+        <!-- <div class = "textbox">
             <h2>Lab Contributions</h2>
             <div class = "overlay">
                 Lab Director<br>
@@ -63,7 +89,7 @@
                 learned a bit about cables when buying the fiber optic cables<br>
                 AOC (I hope)<br>
             </div>
-        </div>
+        </div> -->
         <img src="Mirror_Under_Construction_But_Better_Carlone_Cosi.png" class="big_tux">
     </body>
 </html>
