better css, more info coming soon

--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
             width: 200px;
             height: auto;
             z-index: 1;
-            opacity: 90%;
+            <!-- opacity: 90%; -->
             
         }
         .title{
