--- a/sp24.html
+++ b/sp24.html
@@ -18,6 +18,7 @@
                 ADB Talk<br>
                 Organizing HOPE with Hunter<br>
                 DN42 (but kinda failing on that)<br>
+                Changing of root passwords with new template for documentation<br>
             </div>
         </div>
         <br>
