--- a/sp24.html
+++ b/sp24.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>SophiaCarlone mp*</title>
-        <link rel="stylesheet" href="./tux_style.css">
-    </head>
-
-    <body>
-        <div class="title">
-            <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>
-        </div>
-        <br>
-        <div class = "textbox">
-            <h2>Things I did</h2>
-            <div class = "overlay">
-                Surprise Tours<br>
-                TODO program<br>
-                ADB Talk<br>
-                Organizing HOPE with Hunter<br>
-                DN42 (but kinda failing on that)<br>
-                Changing of root passwords with new template for documentation<br>
+<!DOCTYPE html>                                                                                                             
+<html>                                                                                                                      
+    <head>                                                                                                                  
+        <title>SophiaCarlone mp*</title>                                                                                    
+        <link rel="stylesheet" href="./tux_style.css">                                                                      
+    </head>                                                                                                                 
+                                                                                                                            
+    <body>                                                                                                                  
+        <div class="title">                                                                                                 
+            <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>                                                  
+        </div>                                                                                                              
+        <br>                                                                                                                
+        <div class = "textbox">                                                                                             
+            <h2>Things I did</h2>                                                                                           
+            <div class = "overlay">                                                                                         
+                Surprise Tours<br>                                                                                          
+                TODO program<br>                                                                                            
+                ADB Talk<br>                                                                                                
+                Organizing HOPE with Hunter<br>                                                                             
+                DN42 (but kinda failing on that)<br>                                                                        
+                Changing of root passwords with new template for documentation<br>                                          
+                ITL reimage<br>                                                                                             
+                Helping students<br>
+                Helped to get research machines connected 
             </div>
         </div>
         <br>
@@ -33,8 +36,8 @@
                 The first day of moving<br>
                 The second and third day of organizing servers<br>
                 Created the website for my capstone<br>
-                Getting Ziltoid OS reinstalled to be the management server (tenative on Wednesday)<br>
-                Documentation of book (getting that scheduled)<br>
+                Getting Ziltoid OS reinstalled to be the management server<br>
+                Documentation of book<br>
             </div>
         </div>
         <br>
