--- a/sp24.html
+++ b/sp24.html
@@ -9,19 +9,39 @@
         <div class="title">                                                                                                 
             <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>                                                  
         </div>                                                                                                              
+        <br>
+        <div class = "textbox">                                                                                             
+            <h2>Learning</h2>                                                                                           
+            <div class = "overlay">                                                                                         
+                TODO program<br>                                                                                            
+                ADB<br>
+                Trying to self host a website<br>                                                                                                
+                Embers workshop<br>
+            </div>
+        </div>
+        <br>
+        <div class = "textbox">                                                                                             
+            <h2>Teaching</h2>                                                                                           
+            <div class = "overlay">                                                                                         
+                ADB Talk<br>                                                                                                
+                Helping students<br>
+                A2DP Talk<br>
+                Building Your Own Desktop Environment Talk<br>
+                Other things here and there<br>
+                Networking Workshop this weekend
+            </div>
+        </div>
         <br>                                                                                                                
         <div class = "textbox">                                                                                             
-            <h2>Things I did</h2>                                                                                           
+            <h2>Things I did/Shadow Lab Director stuff :o</h2>                                                                                           
             <div class = "overlay">                                                                                         
                 Surprise Tours<br>                                                                                          
                 TODO program<br>                                                                                            
-                ADB Talk<br>                                                                                                
                 Organizing HOPE with Hunter<br>                                                                             
-                DN42 (but kinda failing on that)<br>                                                                        
+                DN42<br>                                                                        
                 Changing of root passwords with new template for documentation<br>                                          
-                ITL reimage<br>                                                                                             
-                Helping students<br>
-                Helped to get research machines connected 
+                ITL reimage<br>                 
+                Accepted Students days                                                                            
             </div>
         </div>
         <br>
@@ -37,7 +57,11 @@
                 The second and third day of organizing servers<br>
                 Created the website for my capstone<br>
                 Getting Ziltoid OS reinstalled to be the management server<br>
+                Finishing my capstone<br>
                 Documentation of book<br>
+                Ziltoid<br>
+                Movement and set up of new servers<br>
+                RAPS
             </div>
         </div>
         <br>
