--- a/sp24.html
+++ b/sp24.html
@@ -2,7 +2,7 @@
 <html>                                                                                                                      
     <head>                                                                                                                  
         <title>SophiaCarlone mp*</title>                                                                                    
-        <link rel="stylesheet" href="./tux_style.css">                                                                      
+        <link rel="stylesheet" href="./Cool_Template/Orb.css">                                                                      
     </head>                                                                                                                 
                                                                                                                             
     <body>                                                                                                                  
@@ -40,7 +40,9 @@
                 Organizing HOPE with Hunter<br>                                                                             
                 DN42<br>                                                                        
                 Changing of root passwords with new template for documentation<br>                                          
-                ITL reimage<br>                 
+                ITL reimage<br>         
+                Verified github reviewer (please also become one)<br>
+                Held the secrets of the universe<br>        
                 Accepted Students days                                                                            
             </div>
         </div>
@@ -65,60 +67,5 @@
             </div>
         </div>
         <br>
-        <!-- <div class = "textbox">
-            <h2>Lab Contributions</h2>
-            <div class = "overlay">
-                Lab Director<br>
-                Activities Fair<br>
-                Career Fair Kick Off<br>
-                Running meetings with Cary<br>
-                Tours<br>
-                Open House firing squad partcipant<br>
-                Github Rules<br>
-                Purchases<br>
-                Inventory<br>
-                Breaking open the LockBox<br>
-                Github Reviews<br>
-                Stepping down as lab director<br>
-            </div>
-        </div>
-        <br>
-        <div class="textbox">
-            <h2>Server Room/Network</h2>
-            <div class="overlay">
-                New Switch Configurations<br>
-                TalDOS<br>
-                Cleaned up a bit one day<br>
-                Lock box shenanigans<br>
-                Creating new topology<br>
-                Most recent outage<br>
-                Working with OIT and Cary when Cary killed the connection<br>
-                Eventually getting a connection to COLO<br>
-            </div>
-        </div>
-        <br>
-        <div class="textbox">
-            <h2>Teaching</h2>
-            <div class="overlay">
-               "What is open source" talk<br>
-               "Switch Configurations" talk<br>
-               Hands on switch switching in COSI main and COLO<br>
-               Taught people coughCARYcough and others about VLANS, switches, COSI network, etc.<br>
-               bash script Talk<br>
-               DN42 Talk<br>
-               A lot of last minute talks<br>
-            </div>
-        </div>
-        <br>
-        <div class="textbox">
-            <h2>Learning</h2>
-            <div class="overlay">
-                Basic CSS<br>
-                Mikrotik's RouterOS for the switches<br>
-                learned a bit about cables when buying the fiber optic cables<br>
-                AOC (I hope)<br>
-            </div>
-        </div> -->
-        <img src="Mirror_Under_Construction_But_Better_Carlone_Cosi.png" class="big_tux">
     </body>
 </html>
