--- a/sp24.html
+++ b/sp24.html
@@ -9,28 +9,6 @@
         <div class="title">                                                                                                 
             <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>                                                  
         </div>                                                                                                              
-        <br>
-        <div class = "textbox">                                                                                             
-            <h2>Learning</h2>                                                                                           
-            <div class = "overlay">                                                                                         
-                TODO program<br>                                                                                            
-                ADB<br>
-                Trying to self host a website<br>                                                                                                
-                Embers workshop<br>
-            </div>
-        </div>
-        <br>
-        <div class = "textbox">                                                                                             
-            <h2>Teaching</h2>                                                                                           
-            <div class = "overlay">                                                                                         
-                ADB Talk<br>                                                                                                
-                Helping students<br>
-                A2DP Talk<br>
-                Building Your Own Desktop Environment Talk<br>
-                Other things here and there<br>
-                Networking Workshop this weekend
-            </div>
-        </div>
         <br>                                                                                                                
         <div class = "textbox">                                                                                             
             <h2>Things I did/Shadow Lab Director stuff :o</h2>                                                                                           
@@ -67,5 +45,30 @@
             </div>
         </div>
         <br>
+        <div class = "textbox">                                                                                             
+            <h2>Learning</h2>                                                                                           
+            <div class = "overlay">                                                                                         
+                TODO program<br>                                                                                            
+                ADB<br>
+                Trying to self host a website<br>                                                                                                
+                Embers workshop<br>
+            </div>
+        </div>
+        <br>
+        <div class = "textbox">                                                                                             
+            <h2>Teaching</h2>                                                                                           
+            <div class = "overlay">                                                                                         
+                ADB Talk<br>                                                                                                
+                Helping students<br>
+                A2DP Talk<br>
+                Building Your Own Desktop Environment Talk<br>
+                Other things here and there<br>
+                Networking Workshop this weekend
+            </div>
+        </div>
+        <br>
+        <div class="fire">
+            <img src="./Cool_Template/firewall.gif" alt="">
+        </div>
     </body>
 </html>
