--- a/sp24.html
+++ b/sp24.html
@@ -9,10 +9,12 @@
         <div class="title">                                                                                                 
             <h1>Sophia Carlone<br>MP*451 for 3 Credits<br>Spring 2024</h1>                                                  
         </div>                                                                                                              
-        <br>                                                                                                                
-        <div class = "textbox">                                                                                             
-            <h2>Things I did/Shadow Lab Director stuff :o</h2>                                                                                           
-            <div class = "overlay">                                                                                         
+        <br>
+        <img src="./Cool_Template/shadowtux.png" alt="">                                                                                                                
+        <div class = "orb">                                                                                             
+            <img src="./Cool_Template/orb.png" alt="">                                                                                      
+            <div class = "text-container">                                                                                         
+                <h2>Things I did/Shadow Lab Director stuff :o</h2>                                                                                           
                 Surprise Tours<br>                                                                                          
                 TODO program<br>                                                                                            
                 Organizing HOPE with Hunter<br>                                                                             
@@ -25,9 +27,10 @@
             </div>
         </div>
         <br>
-        <div class = "textbox">
-            <h2>THE GREAT COSI MOVE OF 2024</h2>
-            <div class = "overlay">
+        <div class = "orb">
+            <img src="./Cool_Template/orb.png" alt="">                                                                                      
+            <div class = "text-container">
+                <h2>THE GREAT COSI MOVE OF 2024</h2>
                 Organization<br>
                 topology<br>
                 Cleaned out COLO<br>
@@ -36,7 +39,6 @@
                 The first day of moving<br>
                 The second and third day of organizing servers<br>
                 Created the website for my capstone<br>
-                Getting Ziltoid OS reinstalled to be the management server<br>
                 Finishing my capstone<br>
                 Documentation of book<br>
                 Ziltoid<br>
@@ -45,9 +47,10 @@
             </div>
         </div>
         <br>
-        <div class = "textbox">                                                                                             
-            <h2>Learning</h2>                                                                                           
-            <div class = "overlay">                                                                                         
+        <div class = "orb">                                                                                             
+            <img src="./Cool_Template/orb.png" alt="">                                                                                      
+            <div class = "text-container">                                                                                         
+                <h2>Learning</h2>                                                                                           
                 TODO program<br>                                                                                            
                 ADB<br>
                 Trying to self host a website<br>                                                                                                
@@ -55,9 +58,10 @@
             </div>
         </div>
         <br>
-        <div class = "textbox">                                                                                             
+        <div class = "orb">       
+            <img src="./Cool_Template/orb.png" alt="">                                                                                      
+           <div class="text-container">
             <h2>Teaching</h2>                                                                                           
-            <div class = "overlay">                                                                                         
                 ADB Talk<br>                                                                                                
                 Helping students<br>
                 A2DP Talk<br>
@@ -67,8 +71,5 @@
             </div>
         </div>
         <br>
-        <div class="fire">
-            <img src="./Cool_Template/firewall.gif" alt="">
-        </div>
     </body>
 </html>
