--- a/sp24.html
+++ b/sp24.html
@@ -67,7 +67,8 @@
                 A2DP Talk<br>
                 Building Your Own Desktop Environment Talk<br>
                 Other things here and there<br>
-                Networking Workshop this weekend
+                Stuff I heard as a Woman in CS Talk<br>
+                Networking Workshop this weekend?
             </div>
         </div>
         <br>
